--- a/books/shibu/1.md
+++ b/books/shibu/1.md
@@ -1,4 +1,7 @@
-# 去湿气
+# 被遗忘的时光
 
-* 莲子汤
-* 白木耳炖冰糖
+> 高音甜 中音准 低音沉 简单一句话就是“通透”
+
+<video autoplay="autoplay" loop="loop" >
+<source src="./QbLyHfAf_3400918778_uhd.mp4.mp4" type="video/mp4">
+</video>
