--- a/books/shibu/1.md
+++ b/books/shibu/1.md
@@ -2,6 +2,4 @@
 
 > 高音甜 中音准 低音沉 简单一句话就是“通透”
 
-<video autoplay="autoplay" loop="loop" >
-<source src="./VUrAe6Gz_3400918778_shd.mp4.mp4" type="video/mp4">
-</video>
+<video autoplay=true muted src="./VUrAe6Gz_3400918778_shd.mp4.mp4"></video>
