--- a/books/shibu/1.md
+++ b/books/shibu/1.md
@@ -2,4 +2,6 @@
 
 > 高音甜 中音准 低音沉 简单一句话就是“通透”
 
-<video src="./VUrAe6Gz_3400918778_shd.mp4.mp4" muted loop autoplay></video>
+<div class="videoContent">
+  <video src="./VUrAe6Gz_3400918778_shd.mp4.mp4" muted loop autoplay preload="auto" width="100%" height="100%"></video>
+</div>
